fix footer spacing

--- a/WebProjects/drumsticks/styles.css
+++ b/WebProjects/drumsticks/styles.css
@@ -68,9 +68,13 @@ button:hover{
     background-image: url(images/tom4.png);
     object-fit: cover;
 }
-p{
+footer{
+    display:flex ;
+    justify-content: center;
     font-size: 20px;
-    text-align: center;
+}
+p{
+    margin-right: 16px;
 }
 .pressed {
     transform: scale(0.9);
